--- a/latex/tabelle-abr.tex
+++ b/latex/tabelle-abr.tex
@@ -1,75 +1,94 @@
-\begin{table}
+\begin{table}[H]
 \centering
 \caption{Inserimento in un ABR}
 \label{Inserimento in un ABR}
-\begin{tabular}{rrr}
- & Dimensione dell'insieme di dati & Tempo di inserimento (s) \\
-0 & 1000 & 0.003 \\
-\cline{1-3}
-1 & 5000 & 0.016 \\
-\cline{1-3}
-2 & 10000 & 0.031 \\
-\cline{1-3}
-3 & 25000 & 0.075 \\
-\cline{1-3}
-4 & 50000 & 0.179 \\
-\cline{1-3}
+\begin{tabular}{cccc}
+ & Dimensione & Tempo di inserimento (s) & Deviazione standard \\
+0 & 1000 & 0.002 & 0.000 \\
+\cline{1-4}
+1 & 5000 & 0.012 & 0.002 \\
+\cline{1-4}
+2 & 10000 & 0.022 & 0.003 \\
+\cline{1-4}
+3 & 25000 & 0.056 & 0.009 \\
+\cline{1-4}
+4 & 50000 & 0.115 & 0.022 \\
+\cline{1-4}
 \end{tabular}
 \end{table}
 
-\begin{table}
+\begin{table}[H]
 \centering
 \caption{Rimozione in un ABR}
 \label{Rimozione in un ABR}
-\begin{tabular}{rrr}
- & Dimensione dell'insieme di dati & Tempo di rimozione (s) \\
-0 & 1000 & 0.002 \\
-\cline{1-3}
-1 & 5000 & 0.010 \\
-\cline{1-3}
-2 & 10000 & 0.013 \\
-\cline{1-3}
-3 & 25000 & 0.016 \\
-\cline{1-3}
-4 & 50000 & 0.023 \\
-\cline{1-3}
+\begin{tabular}{cccc}
+ & Dimensione & Tempo di rimozione (s) & Deviazione standard \\
+0 & 1000 & 0.002 & 0.000 \\
+\cline{1-4}
+1 & 5000 & 0.007 & 0.001 \\
+\cline{1-4}
+2 & 10000 & 0.009 & 0.002 \\
+\cline{1-4}
+3 & 25000 & 0.012 & 0.002 \\
+\cline{1-4}
+4 & 50000 & 0.017 & 0.004 \\
+\cline{1-4}
 \end{tabular}
 \end{table}
 
-\begin{table}
+\begin{table}[H]
+\centering
+\caption{Ricerca in un ABR}
+\label{Ricerca in un ABR}
+\begin{tabular}{cccc}
+ & Dimensione & Tempo di ricerca (s) & Deviazione standard \\
+0 & 1000 & 0.002 & 0.000 \\
+\cline{1-4}
+1 & 5000 & 0.009 & 0.002 \\
+\cline{1-4}
+2 & 10000 & 0.017 & 0.002 \\
+\cline{1-4}
+3 & 25000 & 0.047 & 0.009 \\
+\cline{1-4}
+4 & 50000 & 0.099 & 0.018 \\
+\cline{1-4}
+\end{tabular}
+\end{table}
+
+\begin{table}[H]
 \centering
 \caption{OS-Select in un ABR}
 \label{OS-Select in un ABR}
-\begin{tabular}{rrr}
- & Dimensione dell'insieme di dati & Tempo di OS-Select (s) \\
-0 & 1000 & 0.180 \\
-\cline{1-3}
-1 & 5000 & 1.741 \\
-\cline{1-3}
-2 & 10000 & 4.501 \\
-\cline{1-3}
-3 & 25000 & 7.941 \\
-\cline{1-3}
-4 & 50000 & 17.625 \\
-\cline{1-3}
+\begin{tabular}{cccc}
+ & Dimensione & Tempo di OS-Select (s) & Deviazione standard \\
+0 & 1000 & 0.152 & 0.040 \\
+\cline{1-4}
+1 & 5000 & 1.067 & 0.198 \\
+\cline{1-4}
+2 & 10000 & 2.085 & 0.219 \\
+\cline{1-4}
+3 & 25000 & 5.092 & 0.369 \\
+\cline{1-4}
+4 & 50000 & 9.947 & 0.350 \\
+\cline{1-4}
 \end{tabular}
 \end{table}
 
-\begin{table}
+\begin{table}[H]
 \centering
 \caption{OS-Rank in un ABR}
 \label{OS-Rank in un ABR}
-\begin{tabular}{rrr}
- & Dimensione dell'insieme di dati & Tempo di OS-Rank (s) \\
-0 & 1000 & 0.105 \\
-\cline{1-3}
-1 & 5000 & 0.785 \\
-\cline{1-3}
-2 & 10000 & 1.545 \\
-\cline{1-3}
-3 & 25000 & 5.017 \\
-\cline{1-3}
-4 & 50000 & 10.867 \\
-\cline{1-3}
+\begin{tabular}{cccc}
+ & Dimensione & Tempo di OS-Rank (s) & Deviazione standard \\
+0 & 1000 & 0.060 & 0.003 \\
+\cline{1-4}
+1 & 5000 & 0.489 & 0.078 \\
+\cline{1-4}
+2 & 10000 & 0.991 & 0.151 \\
+\cline{1-4}
+3 & 25000 & 2.460 & 0.250 \\
+\cline{1-4}
+4 & 50000 & 5.000 & 0.393 \\
+\cline{1-4}
 \end{tabular}
 \end{table}
