--- a/latex/tabelle-rn-aumentato.tex
+++ b/latex/tabelle-rn-aumentato.tex
@@ -1,75 +1,84 @@
-\begin{table}
+\begin{table}[H]
 \centering
 \caption{Inserimento in un albero RN aumentato}
 \label{Inserimento in un albero RN aumentato}
-\begin{tabular}{ccc}
- & Dimensione dell'insieme di dati & Tempo di inserimento (s) \\
-0 & 1000 & 0.012 \\
-\cline{1-3}
-1 & 5000 & 0.060 \\
-\cline{1-3}
-2 & 10000 & 0.123 \\
-\cline{1-3}
-3 & 25000 & 0.326 \\
-\cline{1-3}
-4 & 50000 & 1.229 \\
-\cline{1-3}
+\begin{tabular}{cccc}
+ & Dimensione & Tempo di inserimento (s) & Deviazione standard \\
+0 & 1000 & 0.008 & 0.001 \\
+\cline{1-4}
+1 & 5000 & 0.042 & 0.007 \\
+\cline{1-4}
+2 & 10000 & 0.090 & 0.020 \\
+\cline{1-4}
+3 & 25000 & 0.192 & 0.015 \\
+\cline{1-4}
 \end{tabular}
 \end{table}
 
-\begin{table}
+\begin{table}[H]
 \centering
 \caption{Rimozione in un albero RN aumentato}
 \label{Rimozione in un albero RN aumentato}
-\begin{tabular}{ccc}
- & Dimensione dell'insieme di dati & Tempo di rimozione (s) \\
-0 & 1000 & 0.009 \\
-\cline{1-3}
-1 & 5000 & 0.035 \\
-\cline{1-3}
-2 & 10000 & 0.044 \\
-\cline{1-3}
-3 & 25000 & 0.091 \\
-\cline{1-3}
-4 & 50000 & 0.107 \\
-\cline{1-3}
+\begin{tabular}{cccc}
+ & Dimensione & Tempo di rimozione (s) & Deviazione standard \\
+0 & 1000 & 0.006 & 0.001 \\
+\cline{1-4}
+1 & 5000 & 0.023 & 0.001 \\
+\cline{1-4}
+2 & 10000 & 0.034 & 0.009 \\
+\cline{1-4}
+3 & 25000 & 0.030 & 0.003 \\
+\cline{1-4}
 \end{tabular}
 \end{table}
 
-\begin{table}
+\begin{table}[H]
+\centering
+\caption{Ricerca in un albero RN aumentato}
+\label{Ricerca in un albero RN aumentato}
+\begin{tabular}{cccc}
+ & Dimensione & Tempo di ricerca (s) & Deviazione standard \\
+0 & 1000 & 0.001 & 0.000 \\
+\cline{1-4}
+1 & 5000 & 0.007 & 0.001 \\
+\cline{1-4}
+2 & 10000 & 0.016 & 0.004 \\
+\cline{1-4}
+3 & 25000 & 0.036 & 0.002 \\
+\cline{1-4}
+\end{tabular}
+\end{table}
+
+\begin{table}[H]
 \centering
 \caption{OS-Select in un albero RN aumentato}
 \label{OS-Select in un albero RN aumentato}
-\begin{tabular}{ccc}
- & Dimensione dell'insieme di dati & Tempo di OS-Select (s) \\
-0 & 1000 & 0.005 \\
-\cline{1-3}
-1 & 5000 & 0.024 \\
-\cline{1-3}
-2 & 10000 & 0.049 \\
-\cline{1-3}
-3 & 25000 & 0.216 \\
-\cline{1-3}
-4 & 50000 & 0.523 \\
-\cline{1-3}
+\begin{tabular}{cccc}
+ & Dimensione & Tempo di OS-Select (s) & Deviazione standard \\
+0 & 1000 & 0.003 & 0.000 \\
+\cline{1-4}
+1 & 5000 & 0.016 & 0.002 \\
+\cline{1-4}
+2 & 10000 & 0.038 & 0.010 \\
+\cline{1-4}
+3 & 25000 & 0.075 & 0.002 \\
+\cline{1-4}
 \end{tabular}
 \end{table}
 
-\begin{table}
+\begin{table}[H]
 \centering
 \caption{OS-Rank in un albero RN aumentato}
 \label{OS-Rank in un albero RN aumentato}
-\begin{tabular}{ccc}
- & Dimensione dell'insieme di dati & Tempo di OS-Rank (s) \\
-0 & 1000 & 0.003 \\
-\cline{1-3}
-1 & 5000 & 0.015 \\
-\cline{1-3}
-2 & 10000 & 0.031 \\
-\cline{1-3}
-3 & 25000 & 0.155 \\
-\cline{1-3}
-4 & 50000 & 0.306 \\
-\cline{1-3}
+\begin{tabular}{cccc}
+ & Dimensione & Tempo di OS-Rank (s) & Deviazione standard \\
+0 & 1000 & 0.002 & 0.001 \\
+\cline{1-4}
+1 & 5000 & 0.010 & 0.001 \\
+\cline{1-4}
+2 & 10000 & 0.025 & 0.006 \\
+\cline{1-4}
+3 & 25000 & 0.050 & 0.002 \\
+\cline{1-4}
 \end{tabular}
 \end{table}
