Updated latex generation path

--- a/latex/tabelle-rn-aumentato.tex
+++ b/latex/tabelle-rn-aumentato.tex
@@ -1,67 +1,26 @@
 \begin{table}[H]
 \centering
-\caption{Inserimento in un albero RN aumentato}
-\label{Inserimento in un albero RN aumentato}
-\begin{tabular}{cccc}
- & Dimensione & Tempo di inserimento (s) & Deviazione standard \\
-0 & 1000 & 0.008 & 0.001 \\
-\cline{1-4}
-1 & 5000 & 0.042 & 0.007 \\
-\cline{1-4}
-2 & 10000 & 0.090 & 0.020 \\
-\cline{1-4}
-3 & 25000 & 0.192 & 0.015 \\
-\cline{1-4}
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
-\caption{Rimozione in un albero RN aumentato}
-\label{Rimozione in un albero RN aumentato}
-\begin{tabular}{cccc}
- & Dimensione & Tempo di rimozione (s) & Deviazione standard \\
-0 & 1000 & 0.006 & 0.001 \\
-\cline{1-4}
-1 & 5000 & 0.023 & 0.001 \\
-\cline{1-4}
-2 & 10000 & 0.034 & 0.009 \\
-\cline{1-4}
-3 & 25000 & 0.030 & 0.003 \\
-\cline{1-4}
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
-\caption{Ricerca in un albero RN aumentato}
-\label{Ricerca in un albero RN aumentato}
-\begin{tabular}{cccc}
- & Dimensione & Tempo di ricerca (s) & Deviazione standard \\
-0 & 1000 & 0.001 & 0.000 \\
-\cline{1-4}
-1 & 5000 & 0.007 & 0.001 \\
-\cline{1-4}
-2 & 10000 & 0.016 & 0.004 \\
-\cline{1-4}
-3 & 25000 & 0.036 & 0.002 \\
-\cline{1-4}
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
 \caption{OS-Select in un albero RN aumentato}
 \label{OS-Select in un albero RN aumentato}
 \begin{tabular}{cccc}
- & Dimensione & Tempo di OS-Select (s) & Deviazione standard \\
-0 & 1000 & 0.003 & 0.000 \\
+ & Dimensione (n) & Tempo (s) & Deviazione standard \\
+0 & 10 & 0.000 & 0.000 \\
 \cline{1-4}
-1 & 5000 & 0.016 & 0.002 \\
+1 & 20 & 0.000 & 0.000 \\
 \cline{1-4}
-2 & 10000 & 0.038 & 0.010 \\
+2 & 30 & 0.000 & 0.000 \\
 \cline{1-4}
-3 & 25000 & 0.075 & 0.002 \\
+3 & 40 & 0.000 & 0.000 \\
+\cline{1-4}
+4 & 50 & 0.000 & 0.000 \\
+\cline{1-4}
+5 & 60 & 0.000 & 0.000 \\
+\cline{1-4}
+6 & 70 & 0.000 & 0.000 \\
+\cline{1-4}
+7 & 80 & 0.000 & 0.000 \\
+\cline{1-4}
+8 & 100 & 0.000 & 0.000 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
@@ -71,14 +30,24 @@
 \caption{OS-Rank in un albero RN aumentato}
 \label{OS-Rank in un albero RN aumentato}
 \begin{tabular}{cccc}
- & Dimensione & Tempo di OS-Rank (s) & Deviazione standard \\
-0 & 1000 & 0.002 & 0.001 \\
+ & Dimensione (n) & Tempo (s) & Deviazione standard \\
+0 & 10 & 0.000 & 0.000 \\
 \cline{1-4}
-1 & 5000 & 0.010 & 0.001 \\
+1 & 20 & 0.000 & 0.000 \\
 \cline{1-4}
-2 & 10000 & 0.025 & 0.006 \\
+2 & 30 & 0.000 & 0.000 \\
 \cline{1-4}
-3 & 25000 & 0.050 & 0.002 \\
+3 & 40 & 0.000 & 0.000 \\
+\cline{1-4}
+4 & 50 & 0.000 & 0.000 \\
+\cline{1-4}
+5 & 60 & 0.000 & 0.000 \\
+\cline{1-4}
+6 & 70 & 0.000 & 0.000 \\
+\cline{1-4}
+7 & 80 & 0.000 & 0.000 \\
+\cline{1-4}
+8 & 100 & 0.000 & 0.000 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
