--- a/latex/tabelle-abr.tex
+++ b/latex/tabelle-abr.tex
@@ -1,75 +1,26 @@
 \begin{table}[H]
 \centering
-\caption{Inserimento in un ABR}
-\label{Inserimento in un ABR}
-\begin{tabular}{cccc}
- & Dimensione & Tempo di inserimento (s) & Deviazione standard \\
-0 & 1000 & 0.002 & 0.000 \\
-\cline{1-4}
-1 & 5000 & 0.012 & 0.002 \\
-\cline{1-4}
-2 & 10000 & 0.022 & 0.003 \\
-\cline{1-4}
-3 & 25000 & 0.056 & 0.009 \\
-\cline{1-4}
-4 & 50000 & 0.115 & 0.022 \\
-\cline{1-4}
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
-\caption{Rimozione in un ABR}
-\label{Rimozione in un ABR}
-\begin{tabular}{cccc}
- & Dimensione & Tempo di rimozione (s) & Deviazione standard \\
-0 & 1000 & 0.002 & 0.000 \\
-\cline{1-4}
-1 & 5000 & 0.007 & 0.001 \\
-\cline{1-4}
-2 & 10000 & 0.009 & 0.002 \\
-\cline{1-4}
-3 & 25000 & 0.012 & 0.002 \\
-\cline{1-4}
-4 & 50000 & 0.017 & 0.004 \\
-\cline{1-4}
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
-\caption{Ricerca in un ABR}
-\label{Ricerca in un ABR}
-\begin{tabular}{cccc}
- & Dimensione & Tempo di ricerca (s) & Deviazione standard \\
-0 & 1000 & 0.002 & 0.000 \\
-\cline{1-4}
-1 & 5000 & 0.009 & 0.002 \\
-\cline{1-4}
-2 & 10000 & 0.017 & 0.002 \\
-\cline{1-4}
-3 & 25000 & 0.047 & 0.009 \\
-\cline{1-4}
-4 & 50000 & 0.099 & 0.018 \\
-\cline{1-4}
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
 \caption{OS-Select in un ABR}
 \label{OS-Select in un ABR}
 \begin{tabular}{cccc}
- & Dimensione & Tempo di OS-Select (s) & Deviazione standard \\
-0 & 1000 & 0.152 & 0.040 \\
+ & Dimensione (n) & Tempo (s) & Deviazione standard \\
+0 & 10 & 0.000 & 0.000 \\
 \cline{1-4}
-1 & 5000 & 1.067 & 0.198 \\
+1 & 20 & 0.000 & 0.000 \\
 \cline{1-4}
-2 & 10000 & 2.085 & 0.219 \\
+2 & 30 & 0.000 & 0.000 \\
 \cline{1-4}
-3 & 25000 & 5.092 & 0.369 \\
+3 & 40 & 0.000 & 0.000 \\
 \cline{1-4}
-4 & 50000 & 9.947 & 0.350 \\
+4 & 50 & 0.000 & 0.000 \\
+\cline{1-4}
+5 & 60 & 0.001 & 0.000 \\
+\cline{1-4}
+6 & 70 & 0.001 & 0.000 \\
+\cline{1-4}
+7 & 80 & 0.001 & 0.000 \\
+\cline{1-4}
+8 & 100 & 0.001 & 0.001 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
@@ -79,16 +30,24 @@
 \caption{OS-Rank in un ABR}
 \label{OS-Rank in un ABR}
 \begin{tabular}{cccc}
- & Dimensione & Tempo di OS-Rank (s) & Deviazione standard \\
-0 & 1000 & 0.060 & 0.003 \\
+ & Dimensione (n) & Tempo (s) & Deviazione standard \\
+0 & 10 & 0.000 & 0.000 \\
 \cline{1-4}
-1 & 5000 & 0.489 & 0.078 \\
+1 & 20 & 0.000 & 0.000 \\
 \cline{1-4}
-2 & 10000 & 0.991 & 0.151 \\
+2 & 30 & 0.000 & 0.000 \\
 \cline{1-4}
-3 & 25000 & 2.460 & 0.250 \\
+3 & 40 & 0.000 & 0.000 \\
 \cline{1-4}
-4 & 50000 & 5.000 & 0.393 \\
+4 & 50 & 0.000 & 0.000 \\
+\cline{1-4}
+5 & 60 & 0.000 & 0.000 \\
+\cline{1-4}
+6 & 70 & 0.000 & 0.000 \\
+\cline{1-4}
+7 & 80 & 0.000 & 0.000 \\
+\cline{1-4}
+8 & 100 & 0.001 & 0.000 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
