--- a/latex/tabelle-lista-ordinata.tex
+++ b/latex/tabelle-lista-ordinata.tex
@@ -1,67 +1,26 @@
 \begin{table}[H]
 \centering
-\caption{Inserimento in una lista ordinata}
-\label{Inserimento in una lista ordinata}
-\begin{tabular}{cccc}
- & Dimensione & Tempo di inserimento (s) & Deviazione standard \\
-0 & 1000 & 0.026 & 0.017 \\
-\cline{1-4}
-1 & 5000 & 0.590 & 0.127 \\
-\cline{1-4}
-2 & 10000 & 2.524 & 0.210 \\
-\cline{1-4}
-3 & 15000 & 5.773 & 0.201 \\
-\cline{1-4}
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
-\caption{Rimozione in una lista ordinata}
-\label{Rimozione in una lista ordinata}
-\begin{tabular}{cccc}
- & Dimensione & Tempo di rimozione (s) & Deviazione standard \\
-0 & 1000 & 0.019 & 0.006 \\
-\cline{1-4}
-1 & 5000 & 0.523 & 0.126 \\
-\cline{1-4}
-2 & 10000 & 2.206 & 0.129 \\
-\cline{1-4}
-3 & 15000 & 5.552 & 0.184 \\
-\cline{1-4}
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
-\caption{Ricerca in una lista ordinata}
-\label{Ricerca in una lista ordinata}
-\begin{tabular}{cccc}
- & Dimensione & Tempo di ricerca (s) & Deviazione standard \\
-0 & 1000 & 0.030 & 0.007 \\
-\cline{1-4}
-1 & 5000 & 0.985 & 0.295 \\
-\cline{1-4}
-2 & 10000 & 4.220 & 0.248 \\
-\cline{1-4}
-3 & 15000 & 10.275 & 0.322 \\
-\cline{1-4}
-\end{tabular}
-\end{table}
-
-\begin{table}[H]
-\centering
 \caption{OS-Select in una lista ordinata}
 \label{OS-Select in una lista ordinata}
 \begin{tabular}{cccc}
- & Dimensione & Tempo di OS-Select (s) & Deviazione standard \\
-0 & 1000 & 0.040 & 0.010 \\
+ & Dimensione (n) & Tempo (s) & Deviazione standard \\
+0 & 10 & 0.000 & 0.000 \\
 \cline{1-4}
-1 & 5000 & 1.047 & 0.164 \\
+1 & 20 & 0.000 & 0.000 \\
 \cline{1-4}
-2 & 10000 & 4.675 & 0.308 \\
+2 & 30 & 0.000 & 0.000 \\
 \cline{1-4}
-3 & 15000 & 11.302 & 0.194 \\
+3 & 40 & 0.000 & 0.000 \\
+\cline{1-4}
+4 & 50 & 0.000 & 0.000 \\
+\cline{1-4}
+5 & 60 & 0.000 & 0.000 \\
+\cline{1-4}
+6 & 70 & 0.000 & 0.000 \\
+\cline{1-4}
+7 & 80 & 0.000 & 0.000 \\
+\cline{1-4}
+8 & 100 & 0.000 & 0.000 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
@@ -71,14 +30,24 @@
 \caption{OS-Rank in una lista ordinata}
 \label{OS-Rank in una lista ordinata}
 \begin{tabular}{cccc}
- & Dimensione & Tempo di OS-Rank (s) & Deviazione standard \\
-0 & 1000 & 0.043 & 0.010 \\
+ & Dimensione (n) & Tempo (s) & Deviazione standard \\
+0 & 10 & 0.000 & 0.000 \\
 \cline{1-4}
-1 & 5000 & 1.223 & 0.184 \\
+1 & 20 & 0.000 & 0.000 \\
 \cline{1-4}
-2 & 10000 & 5.529 & 0.393 \\
+2 & 30 & 0.000 & 0.000 \\
 \cline{1-4}
-3 & 15000 & 13.104 & 0.298 \\
+3 & 40 & 0.000 & 0.000 \\
+\cline{1-4}
+4 & 50 & 0.000 & 0.000 \\
+\cline{1-4}
+5 & 60 & 0.000 & 0.000 \\
+\cline{1-4}
+6 & 70 & 0.000 & 0.000 \\
+\cline{1-4}
+7 & 80 & 0.000 & 0.000 \\
+\cline{1-4}
+8 & 100 & 0.000 & 0.000 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
