Fixed plotting system

--- a/latex/tabelle-abr.tex
+++ b/latex/tabelle-abr.tex
@@ -14,13 +14,21 @@
 \cline{1-4}
 4 & 50 & 0.000 & 0.000 \\
 \cline{1-4}
-5 & 60 & 0.001 & 0.000 \\
+5 & 60 & 0.000 & 0.000 \\
 \cline{1-4}
 6 & 70 & 0.001 & 0.000 \\
 \cline{1-4}
 7 & 80 & 0.001 & 0.000 \\
 \cline{1-4}
-8 & 100 & 0.001 & 0.001 \\
+8 & 100 & 0.001 & 0.000 \\
+\cline{1-4}
+9 & 200 & 0.005 & 0.002 \\
+\cline{1-4}
+10 & 300 & 0.012 & 0.003 \\
+\cline{1-4}
+11 & 400 & 0.019 & 0.006 \\
+\cline{1-4}
+12 & 500 & 0.028 & 0.008 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
@@ -48,6 +56,14 @@
 7 & 80 & 0.000 & 0.000 \\
 \cline{1-4}
 8 & 100 & 0.001 & 0.000 \\
+\cline{1-4}
+9 & 200 & 0.002 & 0.000 \\
+\cline{1-4}
+10 & 300 & 0.004 & 0.001 \\
+\cline{1-4}
+11 & 400 & 0.008 & 0.001 \\
+\cline{1-4}
+12 & 500 & 0.011 & 0.001 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
