--- a/latex/tabelle-lista-ordinata.tex
+++ b/latex/tabelle-lista-ordinata.tex
@@ -22,6 +22,14 @@
 \cline{1-4}
 8 & 100 & 0.000 & 0.000 \\
 \cline{1-4}
+9 & 200 & 0.001 & 0.000 \\
+\cline{1-4}
+10 & 300 & 0.002 & 0.000 \\
+\cline{1-4}
+11 & 400 & 0.003 & 0.000 \\
+\cline{1-4}
+12 & 500 & 0.005 & 0.001 \\
+\cline{1-4}
 \end{tabular}
 \end{table}
 
@@ -48,6 +56,14 @@
 7 & 80 & 0.000 & 0.000 \\
 \cline{1-4}
 8 & 100 & 0.000 & 0.000 \\
+\cline{1-4}
+9 & 200 & 0.001 & 0.000 \\
+\cline{1-4}
+10 & 300 & 0.002 & 0.000 \\
+\cline{1-4}
+11 & 400 & 0.004 & 0.001 \\
+\cline{1-4}
+12 & 500 & 0.006 & 0.001 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
