--- a/latex/tabelle-rn-aumentato.tex
+++ b/latex/tabelle-rn-aumentato.tex
@@ -22,6 +22,18 @@
 \cline{1-4}
 8 & 100 & 0.000 & 0.000 \\
 \cline{1-4}
+9 & 500 & 0.001 & 0.000 \\
+\cline{1-4}
+10 & 1000 & 0.001 & 0.000 \\
+\cline{1-4}
+11 & 2000 & 0.003 & 0.000 \\
+\cline{1-4}
+12 & 3000 & 0.006 & 0.001 \\
+\cline{1-4}
+13 & 4000 & 0.008 & 0.001 \\
+\cline{1-4}
+14 & 5000 & 0.010 & 0.002 \\
+\cline{1-4}
 \end{tabular}
 \end{table}
 
@@ -48,6 +60,18 @@
 7 & 80 & 0.000 & 0.000 \\
 \cline{1-4}
 8 & 100 & 0.000 & 0.000 \\
+\cline{1-4}
+9 & 500 & 0.000 & 0.000 \\
+\cline{1-4}
+10 & 1000 & 0.001 & 0.000 \\
+\cline{1-4}
+11 & 2000 & 0.002 & 0.000 \\
+\cline{1-4}
+12 & 3000 & 0.004 & 0.001 \\
+\cline{1-4}
+13 & 4000 & 0.005 & 0.001 \\
+\cline{1-4}
+14 & 5000 & 0.007 & 0.001 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
