--- a/latex/tabelle-rn-aumentato.tex
+++ b/latex/tabelle-rn-aumentato.tex
@@ -4,35 +4,85 @@
 \label{OS-Select in un albero RN aumentato}
 \begin{tabular}{cccc}
  & Dimensione (n) & Tempo (s) & Deviazione standard \\
-0 & 10 & 0.000 & 0.000 \\
+0 & 10 & 0.0000 & 0.0000 \\
 \cline{1-4}
-1 & 20 & 0.000 & 0.000 \\
+1 & 20 & 0.0000 & 0.0000 \\
 \cline{1-4}
-2 & 30 & 0.000 & 0.000 \\
+2 & 30 & 0.0000 & 0.0000 \\
 \cline{1-4}
-3 & 40 & 0.000 & 0.000 \\
+3 & 40 & 0.0000 & 0.0000 \\
 \cline{1-4}
-4 & 50 & 0.000 & 0.000 \\
+4 & 50 & 0.0000 & 0.0000 \\
 \cline{1-4}
-5 & 60 & 0.000 & 0.000 \\
+5 & 60 & 0.0000 & 0.0000 \\
 \cline{1-4}
-6 & 70 & 0.000 & 0.000 \\
+6 & 70 & 0.0001 & 0.0000 \\
 \cline{1-4}
-7 & 80 & 0.000 & 0.000 \\
+7 & 80 & 0.0001 & 0.0000 \\
 \cline{1-4}
-8 & 100 & 0.000 & 0.000 \\
+8 & 90 & 0.0001 & 0.0000 \\
 \cline{1-4}
-9 & 500 & 0.001 & 0.000 \\
+9 & 100 & 0.0001 & 0.0000 \\
 \cline{1-4}
-10 & 1000 & 0.001 & 0.000 \\
+10 & 110 & 0.0001 & 0.0000 \\
 \cline{1-4}
-11 & 2000 & 0.003 & 0.000 \\
+11 & 120 & 0.0001 & 0.0000 \\
 \cline{1-4}
-12 & 3000 & 0.006 & 0.001 \\
+12 & 130 & 0.0001 & 0.0000 \\
 \cline{1-4}
-13 & 4000 & 0.008 & 0.001 \\
+13 & 140 & 0.0001 & 0.0000 \\
 \cline{1-4}
-14 & 5000 & 0.010 & 0.002 \\
+14 & 150 & 0.0001 & 0.0000 \\
+\cline{1-4}
+15 & 160 & 0.0001 & 0.0000 \\
+\cline{1-4}
+16 & 170 & 0.0001 & 0.0000 \\
+\cline{1-4}
+17 & 180 & 0.0002 & 0.0000 \\
+\cline{1-4}
+18 & 190 & 0.0002 & 0.0000 \\
+\cline{1-4}
+19 & 200 & 0.0002 & 0.0000 \\
+\cline{1-4}
+20 & 210 & 0.0002 & 0.0000 \\
+\cline{1-4}
+21 & 220 & 0.0002 & 0.0000 \\
+\cline{1-4}
+22 & 230 & 0.0002 & 0.0000 \\
+\cline{1-4}
+23 & 240 & 0.0002 & 0.0000 \\
+\cline{1-4}
+24 & 250 & 0.0002 & 0.0000 \\
+\cline{1-4}
+25 & 260 & 0.0002 & 0.0000 \\
+\cline{1-4}
+26 & 270 & 0.0003 & 0.0000 \\
+\cline{1-4}
+27 & 280 & 0.0003 & 0.0000 \\
+\cline{1-4}
+28 & 290 & 0.0003 & 0.0000 \\
+\cline{1-4}
+29 & 300 & 0.0003 & 0.0000 \\
+\cline{1-4}
+30 & 310 & 0.0003 & 0.0000 \\
+\cline{1-4}
+31 & 320 & 0.0003 & 0.0000 \\
+\cline{1-4}
+32 & 330 & 0.0003 & 0.0000 \\
+\cline{1-4}
+33 & 340 & 0.0003 & 0.0000 \\
+\cline{1-4}
+34 & 350 & 0.0004 & 0.0000 \\
+\cline{1-4}
+35 & 360 & 0.0004 & 0.0000 \\
+\cline{1-4}
+36 & 370 & 0.0004 & 0.0000 \\
+\cline{1-4}
+37 & 380 & 0.0004 & 0.0000 \\
+\cline{1-4}
+38 & 390 & 0.0004 & 0.0000 \\
+\cline{1-4}
+39 & 400 & 0.0004 & 0.0000 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
@@ -43,35 +93,85 @@
 \label{OS-Rank in un albero RN aumentato}
 \begin{tabular}{cccc}
  & Dimensione (n) & Tempo (s) & Deviazione standard \\
-0 & 10 & 0.000 & 0.000 \\
+0 & 10 & 0.0000 & 0.0000 \\
 \cline{1-4}
-1 & 20 & 0.000 & 0.000 \\
+1 & 20 & 0.0000 & 0.0000 \\
 \cline{1-4}
-2 & 30 & 0.000 & 0.000 \\
+2 & 30 & 0.0000 & 0.0000 \\
 \cline{1-4}
-3 & 40 & 0.000 & 0.000 \\
+3 & 40 & 0.0000 & 0.0000 \\
 \cline{1-4}
-4 & 50 & 0.000 & 0.000 \\
+4 & 50 & 0.0000 & 0.0000 \\
 \cline{1-4}
-5 & 60 & 0.000 & 0.000 \\
+5 & 60 & 0.0000 & 0.0000 \\
 \cline{1-4}
-6 & 70 & 0.000 & 0.000 \\
+6 & 70 & 0.0000 & 0.0000 \\
 \cline{1-4}
-7 & 80 & 0.000 & 0.000 \\
+7 & 80 & 0.0001 & 0.0000 \\
 \cline{1-4}
-8 & 100 & 0.000 & 0.000 \\
+8 & 90 & 0.0001 & 0.0000 \\
 \cline{1-4}
-9 & 500 & 0.000 & 0.000 \\
+9 & 100 & 0.0001 & 0.0000 \\
 \cline{1-4}
-10 & 1000 & 0.001 & 0.000 \\
+10 & 110 & 0.0001 & 0.0000 \\
 \cline{1-4}
-11 & 2000 & 0.002 & 0.000 \\
+11 & 120 & 0.0001 & 0.0000 \\
 \cline{1-4}
-12 & 3000 & 0.004 & 0.001 \\
+12 & 130 & 0.0001 & 0.0000 \\
 \cline{1-4}
-13 & 4000 & 0.005 & 0.001 \\
+13 & 140 & 0.0001 & 0.0000 \\
 \cline{1-4}
-14 & 5000 & 0.007 & 0.001 \\
+14 & 150 & 0.0001 & 0.0000 \\
+\cline{1-4}
+15 & 160 & 0.0001 & 0.0000 \\
+\cline{1-4}
+16 & 170 & 0.0001 & 0.0000 \\
+\cline{1-4}
+17 & 180 & 0.0001 & 0.0000 \\
+\cline{1-4}
+18 & 190 & 0.0001 & 0.0000 \\
+\cline{1-4}
+19 & 200 & 0.0002 & 0.0000 \\
+\cline{1-4}
+20 & 210 & 0.0002 & 0.0000 \\
+\cline{1-4}
+21 & 220 & 0.0002 & 0.0000 \\
+\cline{1-4}
+22 & 230 & 0.0002 & 0.0000 \\
+\cline{1-4}
+23 & 240 & 0.0002 & 0.0000 \\
+\cline{1-4}
+24 & 250 & 0.0002 & 0.0000 \\
+\cline{1-4}
+25 & 260 & 0.0002 & 0.0000 \\
+\cline{1-4}
+26 & 270 & 0.0002 & 0.0000 \\
+\cline{1-4}
+27 & 280 & 0.0002 & 0.0000 \\
+\cline{1-4}
+28 & 290 & 0.0002 & 0.0000 \\
+\cline{1-4}
+29 & 300 & 0.0002 & 0.0000 \\
+\cline{1-4}
+30 & 310 & 0.0003 & 0.0000 \\
+\cline{1-4}
+31 & 320 & 0.0003 & 0.0000 \\
+\cline{1-4}
+32 & 330 & 0.0003 & 0.0000 \\
+\cline{1-4}
+33 & 340 & 0.0003 & 0.0000 \\
+\cline{1-4}
+34 & 350 & 0.0003 & 0.0000 \\
+\cline{1-4}
+35 & 360 & 0.0003 & 0.0000 \\
+\cline{1-4}
+36 & 370 & 0.0003 & 0.0000 \\
+\cline{1-4}
+37 & 380 & 0.0003 & 0.0000 \\
+\cline{1-4}
+38 & 390 & 0.0003 & 0.0000 \\
+\cline{1-4}
+39 & 400 & 0.0004 & 0.0000 \\
 \cline{1-4}
 \end{tabular}
 \end{table}
